--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check"
   },
   "dependencies": {
+    "@babel/runtime": ">=7",
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
@@ -44,13 +45,15 @@
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
     "posthog-js": "^1.20.2",
-    "react": "^18.2.0",
+    "react": "^16.14.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-notion-x": "^6.15.3",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "vercel": "^28.4.11",
+    "webpack": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
